# VisitaPro

./: .gitignore  Procfile  README.md  REGRAS_NEGOCIO_MOBILE.md  nixpacks.toml  pyproject.toml  railway.toml  refactor.py  requirements.txt  visualizar_logo.html
backend/: create_admin.py  create_group.py  fix_missing_tables.py  manage.py  requirements.txt  reset_db.py
backend/core/: admin.py  api_serializers.py  api_urls.py  api_views.py  apps.py  data_sources.py  forms.py  models.py  relatorios_admin.py  relatorios_models.py  relatorios_serializers.py  relatorios_tests.py  relatorios_urls.py  relatorios_utils.py  relatorios_views.py  urls.py  views.py  web_relatorios_views.py
backend/core/migrations/: 0001_initial.py  0002_alter_regiao_cidade_remove_escola_cidade_and_more.py  0002_remove_empresa_regiao_delete_regiao.py  0003_empresa_cnpj_cpf_alter_empresa_status_funcionario_and_more.py  0003_remove_escola_nome_responsavel_escola_consultor_and_more.py  0004_disciplina_professor.py  0004_empresa_endereco_funcionario_cargo_and_more.py  0005_escola_latitude_escola_longitude.py  0005_remove_funcionario_disciplinas.py  0006_remove_empresa_frequencia_recomendada_dias.py  0006_visita_assinatura_visita_relatorio.py  0007_perguntarelatorio_visita_checkin_lat_and_more.py  0007_remove_empresa_endereco_empresa_bairro_empresa_cep_and_more.py  0008_alter_empresa_consultor.py  0008_perguntarelatorio_tipo_resposta.py  0009_perguntarelatorio_opcoes_resposta_and_more.py  0009_rename_is_consultor_customuser_is_assessor_and_more.py  0010_empresa_data_conversao.py  0010_regiao_secretaria.py  0011_customuser_foto.py  0011_jornada.py  0012_alter_bugreport_options_alter_customuser_options_and_more.py  0012_visita_professores_atendidos.py  0013_configuracaorelatorio_relatoriogerado_and_more.py  0013_visita_foto.py  0014_alter_funcionario_table.py  0014_remove_visita_foto_visitafoto.py  0015_configuracao.py  0015_customuser_telefone_bugreport.py  0016_delete_disciplina.py  0016_perguntarelatorio_fonte_dados_and_more.py  0017_add_grupos_responsavel_configuracao.py  0017_visita_sync_offline_flag.py  (+2 more)
backend/staticfiles/: staticfiles.json
backend/visistasPro/: settings.py
backend/visitaPro/: asgi.py  settings.py  wsgi.py
backend/visitas_corporativas/: asgi.py  settings.py  wsgi.py
backend/visitas_escolares/: asgi.py  settings.py  urls.py  wsgi.py
mobile/: app.config.js  app.json  eas.json  package-lock.json  package.json
mobile/app/: _layout.tsx  configuracoes.tsx  index.tsx  nova-empresa.tsx  novo-agendamento.tsx  novo-funcionario.tsx  perfil.tsx  pesquisa.tsx  recuperar-senha.tsx
mobile/services/: api.ts  location.ts  queue.ts  storage.ts  sync.ts
(+73 files in other folders)
